Fix call to Match engine 2. Handle return and add more tests.

--- a/SearchAndMatch.DAL.Tests/SearchAndMatch.DAL.Tests.csproj
+++ b/SearchAndMatch.DAL.Tests/SearchAndMatch.DAL.Tests.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <ProjectReference Include="..\SearchAndMatch.DAL\SearchAndMatch.DAL.csproj" />
     <ProjectReference Include="..\SearchAndMatch.Domain\SearchAndMatch.Domain.csproj" />
+    <ProjectReference Include="..\SearchAndMatch.Helper\SearchAndMatch.Helper.csproj" />
   </ItemGroup>
 
 </Project>
