--- a/SearchAndMatch.Api/SearchAndMatch.Api.csproj
+++ b/SearchAndMatch.Api/SearchAndMatch.Api.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
       <PrivateAssets>all</PrivateAssets>
@@ -24,6 +25,10 @@
     <ProjectReference Include="..\SearchAndMatch.Application\SearchAndMatch.Application.csproj" />
     <ProjectReference Include="..\SearchAndMatch.DAL\SearchAndMatch.DAL.csproj" />
     <ProjectReference Include="..\SearchAndMatch.Domain\SearchAndMatch.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Queries\" />
   </ItemGroup>
 
 </Project>
